--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>TS LOG</h1>
-    <script src="./index.js"></script>
+    <script src="dist/function.js"></script>
 </body>
 
 </html>
